--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "devdojo/calculator",
+    "name": "vikasdiwakar/calculator",
     "description": "This demo package will do some calculations",
     "type": "demo",
     "license": "MIT",
