--- a/composer.json
+++ b/composer.json
@@ -10,16 +10,5 @@
         }
     ],
     "minimum-stability": "dev",
-    "extra": {
-        "laravel": {
-            "providers": [
-                "Devdojo\\Calculator"
-            ]
-        }
-    },
-    "autoload": {
-        "psr-4": {
-            "Devdojo\\Calculator\\": "packages/devdojo/calculator/src"
-        }
-    }
+    "require": {}
 }
