--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,5 @@
         "sort-packages": true
     },
     "prefer-stable": true,
-    "require": {
-        "laravelcollective/html": "^5.5"
-    }
+    "require": {}
 }
